--- a/regression_with_AI.ipynb
+++ b/regression_with_AI.ipynb
@@ -640,7 +640,7 @@
     "    b = parameters[\"b\"]\n",
     "    \n",
     "    # Forward Propagation to calculate Z.\n",
-    "    Z = np.matmul(W, X) + b  #matrix multiplication of numpy arrays, plus bias, to obtain weighten sums! \n",
+    "    Z = np.matmul(W, X) + b  #matrix multiplication of numpy arrays, plus bias, to obtain weighted sums! \n",
     "    Y_hat = Z\n",
     "\n",
     "    return Y_hat\n",
@@ -886,7 +886,7 @@
    "source": [
     "**Quiz**: \n",
     "\n",
-    "- What happens when you increase the learning rate? \n",
+    "- What happens when you increase the learning rate (*e.g* 4.4)? \n",
     "\n",
     "\n",
     "**Predictions** \n",
@@ -1078,7 +1078,7 @@
    "id": "75cdc482-e3d4-4287-9397-0e2d47151623",
    "metadata": {},
    "source": [
-    "**Training, validation, and test datasets**\n"
+    "**Create Training, validation, and test datasets**\n"
    ]
   },
   {
@@ -1141,7 +1141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Build model\n",
+    "#Build the model: 3-layered, dense neural net\n",
     "model = tf.keras.Sequential([\n",
     "        tf.keras.layers.Dense(64, activation='relu'),\n",
     "        tf.keras.layers.Dense(64, activation='relu'),\n",
